<resources>
    <string name="app_name">DrinkGames</string>
    <string name="idioma">English</string>
    <string name="vacio"> </string>
    <string name="yes">Yes</string>
    <string name="not_car">Do not drink and drive</string>
    <string name="not_drink">Control the amount of alcohol you drink.</string>
    <string name="sabermas">Know more</string>
    <string name="actuliacion_disponible">An update is available.</string>
    <string name="actualizar">Update</string>
    <string name="correo">Email</string>
    <string name="contrasena">Password</string>
    <string name="guardar_sesion">Remember session</string>
    <string name="acpetar">Acept</string>
    <string name="ejecucion">In action…</string>
    <string name="nueva_palabra">New word</string>
    <string name="version">1.0.2</string>
    <string name="beta">Version Beta</string>
    <string name="requerido">Requered</string>
    <string name="volver">Back</string>
    <string name="info">Help</string>
    <string name="invitado">Login as Guest</string>
    <string name="registrarse">Sign Up</string>
    <string name="registro"> Create Account in DrinkGames</string>
    <string name="condiciones">Acept <u>Terms of use and Privacy</u></string>
    <string name="olvido_contraseña"><u>I forgot my password.</u></string>
    <string name="login">Log in</string>
    <string name="contraseña">Password</string>
    <string name="email">e-mail</string>
    <string name="nombre">Name</string>
    <string name="correo_no">The email address or password is not correct</string>
    <string name="registrado">Registered</string>
    <string name="contrasenas_no_coinciden">Passwords do not match</string>
    <string name="contrasenas_caracteres">The password must have a minimum of 6 characters</string>
    <string name="aceptar_usos">You must accept the use policies</string>
    <string name="esperar">Wait…</string>
    <string name="email_ingresar">You must enter an email</string>
    <string name="error">An error has occurred.</string>
    <string name="minijuegos">Minigames</string>
    <string name="yo_nunca">I Never</string>
    <string name="masprobable">Who is most likely …?</string>
    <string name="cinco_cosas">5 things in 15 seconds</string>
    <string name="patata_caliente">Hot potato</string>
    <string name="cara_cruz">Heads or tails</string>
    <string name="mimica">Mime</string>
    <string name="ruleta_rusa">Russian Roulette</string>
    <string name="ruleta_suerte">Wheel of Fortune</string>
    <string name="slotmachine">SlotMachine</string>
    <string name="mayor_menor">Higher or Less</string>
    <string name="setas_venenosas">Poisonous Mushrooms</string>
    <string name="botella">Bottle</string>
    <string name="palillos">Wooden chopsticks</string>
    <string name="voy">I am going to …</string>
    <string name="bebes">Drink</string>
    <string name="mandas_bebes">Send drink</string>
    <string name="bebes_or_mandas">You drink or order a drink</string>
    <string name="tragos">Shots</string>
    <string name="tragos_acumulados">Accumulated Drinks</string>
    <string name="moneda">Coin</string>
    <string name="cara">Face</string>
    <string name="cruz">Cross</string>
    <string name="lanzar_moneda">Flip a coin</string>
    <string name="cartainicial">Initial Letter</string>
    <string name="siete">7</string>
    <string name="quince">15</string>
    <string name="mayor">Higher</string>
    <string name="menor">Less</string>
    <string name="igual">Equal</string>
    <string name="girar_botella">Rotate bottle</string>
    <string name="rodando_botella">Rolling Bottle</string>
    <string name="disparar">Shoot</string>
    <string name="recargado">REVOLVER LOADED!</string>
    <string name="recargar">Reload Revolver</string>
    <string name="probar_suerte">Try your luck!</string>
    <string name="alcance">It hit you squarely!</string>
    <string name="tiro">Shot</string>
    <string name="ocultar">Hide word</string>
    <string name="desocultar">Unhide word</string>
    <string name="comenzar">Start</string>
    <string name="siguiente_frase">Next Phrase</string>
    <string name="siguiente_carta">Next Card</string>
    <string name="fallaste">You failed</string>
    <string name="acertaste">You got it</string>
    <string name="joker">Joker</string>
    <string name="tirar">Pull</string>
    <string name="pulsar_casilla">Press a box to begin.</string>
    <string name="play_gamme">Play again?</string>
    <string name="entendido">Agreed</string>
    <string name="ayuda_masprobable">USER HELP: WHO IS MORE LIKELY THAN… \n \n

                    To start the game, you have to press the <u> START </u> button,
                    this will display a phrase on the screen,
                    the group members will read said sentence, and will point out the individual who is most likely to carry out said action, the most indicated
                    He will drink the drinks that appear on the screen.
                    To change the phrase, press the button <u> NEXT PHRESE</u>
    </string>
    <string name="ayuda_yonunca">HELP THE USER: I NEVER… \n \n

                    To start the game, you have to press the <u> START </u> button
                    this will display a phrase on the screen,
                    whether group members have performed the action shown in that sentence
                    they will drink the drinks that appear on the screen, otherwise you get rid of drinking.

                    To change the phrase, press the button <u> NEXT PHRESE</u>
    </string>
    <string name="ayuda_mimica">USER HELP: MIME \n \n

                    To start the game, you have to press the START button,
                    this will show a word that the user must gesture for the group members to guess,
                    if the users have not guessed the word the user who made the word drink the drinks ordered on the screen,
                    otherwise, users who have not got the word right will drink those drinks.
                    For another user to execute another word, they must click the NEXT WORD button to repeat the process with a different word.
    </string>
    <string name="ayuda_caracruz">USER HELP: FACE OR CROSS \n \n

                    To start the game, users must say out loud that they are going to choose, if heads or tails, on the contrary,
                    then you have to press the THROW COIN button,
                    this will cause a coin to be tossed with the possibility of a FACE or CROSS coming out,
                    If the option you chose comes out, you get rid of drinking for this time,
                    in case you lose you will have to drink the drinks indicated.
                    To flip the coin again, press the THROW COIN button.
    </string>
    <string name="ayuda_botella">USER HELP: BOTTLE \n \n

                    To start the game, the players must get in a circle with the device in the middle of them,
                    then you have to press the button ROTATE BOTTLE,
                    This will make the bottle launch and rotate until it stops,
                    the player who is indicated with the tuto of the bottle will have to drink the drinks that are indicated.
                    To turn the bottle again, press the ROTATE BOTTLE button.
    </string>
    <string name="ayuda_patatacaliente">USER HELP: HOT POTATO \n \n

                    To start the game, you have to press the START button
                    Taking turns, he will say a word related to the theme displayed on the screen and passing through the players of the game until the time is up.
                    The player who has the turn when the time is up must drink.
                    To choose another word, NEW WORD will be given
    </string>
    <string name="ayuda_ruletarusa">USER HELP: RUSSIAN ROULETTE \n \n

                    To start the game, you have to press the LOAD REVOLVER button,
                    this will cause you to store a cartridge in the gun,
                    once this is done, each user who plays must hit the FIRE button,
                    but at any moment when the pistol SHOOTING has the cartridge loaded and it is your turn to drink.
    </string>
    <string name="ayuda_setas">USER HELP: POISONOUS MUSHROOMS \n \n

                    Each player will press a square in turn.
                    Every time a box is uncovered, the drinks will be added to the top counter.
                    When the player picks up a poisonous mushroom, he must perform the action indicated, as many times as the top counter marks it.
    </string>
    <string name="ayuda_mayormenor">HELP TO THE USER: MAJOR OR MINOR \n \n

                    To begin, a main card will come out, the players will press one of the HIGHER, LESS or EQUAL buttons in turns.
                    If they hit the next card, a drink will be added to the accumulator but if you fail, you will drink all the accumulated drinks.
                    Be careful that the JOKER can come out at any moment.
    </string>
    <string name="ayuda_cincocosas">USER HELP: FIVE THINGS \n \n

                    To start the game press the START button,
                    A topic will then appear on the screen and players in rounds on each topic will have to say 5 things related to the topic in question in 15 seconds.
                    If the player completes the challenge, he commands the drinks on the screen to be drunk. Otherwise, you must drink those drinks on the screen when you do not meet the objective.
    </string>
    <string name="ayuda_ruletasuerte">USER HELP: LUCKY ROULETTE \n \n

                    To start the game, you must spin the wheel with the button below,
                    This will make the wheel start to spin until it stops on one of the pieces of the wheel,
                    Once this is done, you must comply with what is mentioned on the screen.
    </string>
    <string name="ayuda_lobbyruletasuerte">USER HELP: LUCKY ROULETTE \n \n

                    Add or Delete Slots using the "+" and "-" buttons up to a total of 10 slots and a minimum of 2 slots.
                    Modify the phrases that appear to give a touch of yours to this Roulette of Luck.
                    Click OK to start the minigame.

    </string>
    <string name="ayuda_slotmachine">USER HELP: SLOT MACHINE \n \n

                   To start the game, you must press the PULL button,
                    then all three slots will start spinning to a stop,
                    depending on the combination, you will win the game or you will have to drink because you have lost.
    </string>
    <string name="ayuda_palillos">HELP THE USER: THE CHOPSTICKS \n \n

                   In turns indicated on the screen, users will choose the toothpick they prefer by clicking on it,
                    Once all the chopsticks have been chosen, the tablecloth that hides them will be revealed by bringing out the chopsticks and thus showing the smallest toothpick that is the bad toothpick
                    and therefore the user who chose said toothpick will lose the game.
    </string>
    <string name="cervezas">Beers</string>
    <string name="avatar">Avatar</string>
    <string name="premium">Premium</string>
    <string name="ver_video">Watch video</string>
    <string name="edit">Edit</string>
    <string name="payment">Accept Payment</string>
    <string name="precio">0,99€</string>
    <string name="ventajas_premium"><u>Premium Advantages:</u></string>
    <string name="ventajas_premium2"> \u0009 + Does not receive advertising within the application</string>
    <string name="ventajas_premium3"> \u0009 + Receive 100 Beers (Bonus)</string>
    <string name="frases_predeterminadas">Default phrases</string>
    <string name="frases_propias">Own phrases</string>
</resources>