<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationMoney"
        android:layout_width="match_parent"
        android:layout_height="468dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/money" />

    <TextView
        android:id="@+id/textViewInfoPayment1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ventajas_premium"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewInfoPayment2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ventajas_premium2"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewInfoPayment3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ventajas_premium3"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewInfoPayment4"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/precio"
        android:textAlignment="center"
        android:textColor="#558B2F"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="payment"
        android:text="@string/payment" />


</LinearLayout>