<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewRellenoEleccion"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:text="@string/vacio" />

    <Button
        android:id="@+id/buttonEleccionFrasesPropias"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:onClick="eleccionMinigame"
        android:text="@string/frases_propias"
        android:textSize="22sp" />

    <Button
        android:id="@+id/buttonEleccionFrasesPredeterminadas"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:onClick="eleccionMinigame"
        android:text="@string/frases_predeterminadas"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textViewRellenoEleccion2"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:text="@string/vacio" />

</LinearLayout>

