<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivityLogin">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="285dp"
        android:layout_height="261dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="414dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/icono" />

    <EditText
        android:id="@+id/editTextUsuarioLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="368dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#fc97ee" />

    <EditText
        android:id="@+id/editTextPasswordLogin"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="318dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#ABDFF6" />

    <TextView
        android:id="@+id/textViewForgotenPass"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="138dp"
        android:onClick="pasarRecuperarContrasena"
        android:text="@string/olvido_contraseña"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textViewInvitado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/redondear_textview"
        android:onClick="pasarInvitado"
        android:text="@string/invitado"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="215dp"
        android:background="@drawable/button_rounded"
        android:onClick="login"
        android:text="@string/login" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="163dp"
        android:background="@drawable/button_rounded"
        android:onClick="pasarSigIn"
        android:text="@string/registrarse" />

    <CheckBox
        android:id="@+id/chkGuardarSesion"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="93dp"
        android:layout_marginBottom="264dp"
        android:text="@string/guardar_sesion"
        android:textColor="#FFFFFF" />

</RelativeLayout>