<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "@color/black"
    tools:context=".MainActivityMayorMenor">

    <TextView
        android:id="@+id/textViewContadorTragosMayorMenor"
        android:layout_width="412dp"
        android:layout_height="93dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/azul"
        android:gravity="center"
        android:text="@string/siete"
        android:textColor="#FFFDFD"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewCarta"
        android:layout_width="412dp"
        android:layout_height="61dp"
        android:layout_below="@+id/textViewContadorTragosMayorMenor"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="0dp"
        android:background="@color/rosa"
        android:gravity="center"
        android:text="@string/tragos"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/buttonMayor"
        android:layout_width="wrap_content"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="91dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/mayor" />

    <Button
        android:id="@+id/buttonMenor"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="280dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/menor" />

    <Button
        android:id="@+id/buttonIgual"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="91dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/igual" />

    <ImageView
        android:id="@+id/imageViewCarta"
        android:layout_width="210dp"
        android:layout_height="218dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="259dp"
        android:layout_marginEnd="102dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/carta_siete" />

</RelativeLayout>