<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityUpdateApp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewUpdateRelleno"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/vacio"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationViewUpdate"
        android:layout_width="match_parent"
        android:layout_height="463dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/update" />

    <TextView
        android:id="@+id/textViewUpdateText"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/actuliacion_disponible"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="actualizarApp"
        android:text="@string/actualizar" />

</LinearLayout>