<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivityPerfil">


    <ImageView
        android:id="@+id/imageViewAvatarProfile"
        android:layout_width="139dp"
        android:layout_height="178dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="149dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/avatar_cero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNumeroCervezas"
        android:layout_width="60dp"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="206dp"
        android:layout_marginEnd="60dp"
        android:text="@string/siete"
        android:textAlignment="center"
        android:textColor="@color/azul"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />


    <ImageView
        android:id="@+id/imageViewNumeroCervezasDisponible"
        android:layout_width="46dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="119dp"
        android:contentDescription="@string/cervezas"
        android:src="@drawable/cerveza" />

    <EditText
        android:id="@+id/editTextNombreProfile"
        android:layout_width="157dp"
        android:layout_height="29dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="52dp"
        android:autofillHints=""
        android:background="@drawable/redondear_textview"
        android:inputType="text"
        android:text="@string/nombre"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextFields" />

    <ImageView
        android:id="@+id/imageViewEditName"
        android:layout_width="38dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="21dp"
        android:background="#E6E5E6"
        android:contentDescription="@string/edit"
        android:onClick="editarNombre"
        android:src="@drawable/ic_edit_foreground" />

    <ImageView
        android:id="@+id/imageViewEditAvatar"
        android:layout_width="38dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="147dp"
        android:layout_marginEnd="227dp"
        android:background="#E6E5E6"
        android:contentDescription="@string/edit"
        android:onClick="seleccionarAvatarDialog"
        android:src="@drawable/ic_edit_foreground" />

    <ImageView
        android:id="@+id/imageViewPremiumDisponible"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="250dp"
        android:contentDescription="@string/premium"
        android:src="@drawable/crown" />

    <Button
        android:id="@+id/buttonVideoXCervezas"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="569dp"
        android:background="@color/amarillo"
        android:text="@string/ver_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent" />

</RelativeLayout>