<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivityMayorMenor">

    <TextView
        android:id="@+id/textViewCincoCosasFrase"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/azul"
        android:gravity="center"
        android:text="@string/cinco_cosas"
        android:textColor="#FFFDFD"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewCincoCosasTragos"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@+id/textViewCincoCosasFrase"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="0dp"
        android:background="@color/rosa"
        android:gravity="center"
        android:text="@string/vacio"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/textViewCincoCosasTiempo"
        android:layout_width="176dp"
        android:layout_height="175dp"
        android:layout_centerInParent="true"
        android:background="@drawable/round_view"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/quince"
        android:textColor="#ff0000"
        android:textSize="56sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonCincoCosas"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="73dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/comenzar" />


</RelativeLayout>