<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivityBotella">

    <TextView
        android:id="@+id/textViewBotella"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:text="@string/botella"
        android:textColor="#FFFDFD"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewTragosBotella"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_below="@+id/textViewBotella"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="0dp"
        android:background="@color/rosa"
        android:gravity="center"
        android:text="@string/tragos"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageViewBotella"
        android:layout_width="195dp"
        android:layout_height="229dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="113dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="193dp"
        android:contentDescription="@string/minijuegos"
        app:srcCompat="@drawable/botella" />

    <Button
        android:id="@+id/buttonGirarbotella"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_alignBottom="@+id/imageViewBotella"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="-122dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/girar_botella" />


</RelativeLayout>